deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: student-d-altenhofer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 4200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: student-d-altenhofer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: student-d-altenhofer
spec:
  ports:
    - port: 80
      targetPort: 4200
      protocol: TCP
      name: http
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: student-d-altenhofer
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: student-d-altenhofer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /d.altenhofer/frontend(.*)$
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: student-d-altenhofer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: student.cloud.htl-leonding.ac.at
      http:
        paths:
          - path: /d.altenhofer/backend(.*)$
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8080
